[package]
name = "viewlog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
term_size = "0.3.2"
unicode-width = "0.1.7"
clap = { version = "4.0.23", features = ["derive"] }
notify = "5.0.0"
ctrlc = { version = "3.2.3", features = ["termination"] }
chrono = "0.4.23"

[target.'cfg(windows)'.dependencies.windows]
version = "0.43.0"
features = [
  "Win32_Foundation",
  "Win32_System_Console"
]

[target.'cfg(unix)'.dependencies]
termios = "0.3.0"
